# email

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  email.cpp  email.h
